put a fixed height on gbrowse region to avoid page jumping (fixes #4286)
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/trunk@40982 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/htdocs/assets/css/AllSites.css
+++ b/Site/htdocs/assets/css/AllSites.css
@@ -1167,9 +1167,16 @@ td {
 a#gbView {
     background: transparent url('../images/button-design.gif') no-repeat scroll top right;
     display: block;
-    float: left;
+/*    float: left; */
     height: 24px;
     padding-left: 7px;
     padding-right: 9px;
     padding-top: 5px;
+    width: 140px;
+    margin: 0px auto;
+}
+
+#gnCtx {
+    height: 500px;
+    overflow: auto;
 }
